<resources>
    <string name="app_name">Extra Mile Driver</string>
    <string name="start_page_background_description">Start Page Background</string>
    <string name="start_page_logo">Start Page logo</string>
    <string name="label_or">OR</string>
    <string name="button_sign_in_text">Sign In</string>
    <string name="button_sign_up_text">Sign Up</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_car_plate_number">Car Plate</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_country_code">country code</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="default_country_code">+65</string>
    <string name="label_type_of_services">Type of Services</string>
    <string name="tnc_compliance_top_line">By Registering, I have read and agreed to the</string>
    <string name="label_terms_and_conditions">Terms and Conditions</string>
    <string name="tnc_compliance_line_two">and the</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_forgot_password_two">Forgot Password</string>
    <string name="label_get_email">Get Email</string>
    <string name="forget_password_reminder">*An email will be sent to you once you have submitted! Do Check your spam if you think you\'ve missed out!</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_wallet">Wallet</string>
    <string name="navbar_job_history">Job History</string>
    <string name="navbar_settings">Settings</string>
    <string name="navbar_faq">FAQ</string>
    <string name="navbar_support">Support</string>
    <string name="navbar_logout">Log Out</string>
    <string name="sharedpreference">SHAREDPREFERENCE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo_name">Extra Mile</string>
    <string name="labelwallet_icon">Wallet Icon</string>
    <string name="share">Share</string>
    <string name="star_icon">star icon</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="today">Today</string>
    <string name="past_week">Past Week</string>
    <string name="leave_us_a_feedback">Leave us a feedback</string>
    <string name="start_typing_here">Start Typing Here</string>
    <string name="call">Call</string>
    <string name="submit">Submit</string>
    <string name="or">Or</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="click_here_to_go_back_to_map">Click here to go back to map</string>
    <string name="trip">Trip</string>
    <string name="destination">Destination</string>
    <string name="select_topic">Select Topic</string>
    <string name="edit_profile">Edit</string>
    <string name="save_profile">Save</string>
    <string name="cancel">cancel</string>
    <string name="message_user">message_user</string>
    <string name="call_user">call user</string>
    <string name="send_message">send message</string>
    <string name="type_a_message">type a message</string>
    <string name="label_drop_off">Drop Off</string>
    <string name="report">Report an Issue</string>
    <string name="done">Done</string>
    <string name="start_typing_here_with_dots">Start typing here...</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="cart_plate_number">Cart Plate Number</string>
    <string name="navigation">navigation</string>
</resources>
