<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HomeFragments.Support">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/leave_us_a_feedback"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:gravity="center"
            android:id="@+id/feedbackTitle"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dp"
            android:hint="@string/select_topic"
            android:textSize="17sp"
            android:drawableRight="@drawable/ic_arrow_drop_down"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:drawableTint="@color/lightgrey"/>

        <EditText
            android:id="@+id/feedbackMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/start_typing_here"
            android:inputType="textMultiLine"
            android:lines="8"
            android:padding="5dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/submitFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/pinkred"
            android:padding="10dp"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/callFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/pinkred"
            android:padding="10dp"
            android:text="@string/call"
            android:textAlignment="center"
            android:textColor="@color/white"/>

    </LinearLayout>

</FrameLayout>