<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ActivityStartPage">
    <ImageView
        android:id="@+id/start_page_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/start_page_bg"
        android:scaleType="centerCrop"
        android:contentDescription="@string/start_page_background_description" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#65000000"/>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/start_page_logo" />
        <Button
            android:id="@+id/toSignup"
            android:padding="12dp"
            android:textAlignment="center"
            android:text="@string/button_sign_up_text"
            android:textColor="@color/fontcolorwhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pinkred"/>
        <TextView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_or"
            android:textAlignment="center"
            android:textColor="@color/fontcolorwhite"/>
        <Button
            android:id="@+id/toSignIn"
            android:padding="12dp"
            android:textAlignment="center"
            android:text="@string/button_sign_in_text"
            android:textColor="@color/fontcolorwhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/swampgreen"/>
    </LinearLayout>

</RelativeLayout>