<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".login.ForgetPassword">

    <RelativeLayout
        android:id="@+id/toolbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/black"
            app:navigationIcon="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/toolbartitle"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="@string/label_forgot_password_two"
            android:textColor="@color/fontcolorwhite"
            android:textSize="15sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarlayout"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/loginsignuptedittextfontcolor"
            android:textColor="@color/loginsignuptedittextfontcolor"
            android:hint="@string/label_email_address"
            android:padding="15dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginsignuptedittext"/>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pinkredbutton"
            android:text="@string/label_get_email"
            android:textColor="@color/white"
            android:padding="15dp"
            android:textAlignment="center"/>
    </LinearLayout>
    <TextView
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:text="@string/forget_password_reminder"/>



</RelativeLayout>