<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".login.Login">
    <RelativeLayout
        android:layout_alignParentTop="true"
        android:id="@+id/toolbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/black"
            app:navigationIcon="@drawable/ic_arrow_back"/>
        <TextView
            android:id="@+id/toolbartitle"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/fontcolorwhite"
            android:text="@string/button_sign_in_text"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarlayout"
        android:orientation="vertical">
        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/loginsignuptedittextfontcolor"
            android:textColor="@color/loginsignuptedittextfontcolor"
            android:hint="@string/label_email_address"
            android:padding="15dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginsignuptedittext"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:textColorHint="@color/loginsignuptedittextfontcolor"
            android:textColor="@color/loginsignuptedittextfontcolor"
            android:hint="@string/label_password"
            android:padding="15dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginsignuptedittext"/>
        <TextView
            android:id="@+id/forgotpassword"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:text="@string/label_forgot_password"
            android:gravity="end" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pinkredbutton"
            android:text="@string/button_sign_in_text"
            android:textColor="@color/white"
            android:padding="15dp"
            android:textAlignment="center"/>

    </LinearLayout>


</RelativeLayout>